Automatically upgrade all packages when building AMI to pick up security patches

--- a/imagebuilder-terraform-container/files/imagebuilder_component_common_packages.yaml
+++ b/imagebuilder-terraform-container/files/imagebuilder_component_common_packages.yaml
@@ -17,6 +17,7 @@ phases:
             - |
               SUCCESS_CODE=0
               apt-get update
+              apt-get upgrade -y
               apt-get install -y \
                 curl \
                 git \
